--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/forge-gas-snapshot"]
 	path = lib/forge-gas-snapshot
 	url = https://github.com/marktoda/forge-gas-snapshot
+[submodule "lib/forge-gas-metering"]
+	path = lib/forge-gas-metering
+	url = https://github.com/emo-eth/forge-gas-metering
